# netmon

./: LICENSE
netmon-desktop/: COLLECTOR_GUIDE.md  GENERATION_ID_IMPLEMENTATION.md  QUALITY_PASS_RESULTS.txt  README.md  REVIEW_RACE_CONDITIONS_AND_COUPLING.md  pyproject.toml  test_exception_logging.py  test_generation_id.py  test_integration_gen_id.py  test_logging_demo.py  test_logging_edge_cases.py  test_logging_manual.py
netmon-desktop/netmon/: __init__.py  __main__.py  collector.py  collector_ping.py  fake_collector.py  logging_config.py  models.py  scheduler.py  workers.py
netmon-desktop/netmon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
netmon-desktop/netmon/ui/: __init__.py  main_window.py  measurement_model.py
netmon-desktop/tests/: test_autoscroll.py  test_collector.py  test_collector_ping.py  test_filtering.py  test_measurement_model.py  test_models.py  test_ping_parsing.py  test_scheduler.py
