[project]
name = "netmon"
version = "0.1.0"
description = "NetMon desktop: lightweight network measurement tool"
requires-python = ">=3.11"
dependencies = [
  "pyside6>=6.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
]

[project.scripts]
netmon = "netmon.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]